--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "A Multiplayer RTS Game",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch-ts": "tsc -w -p . --sourcemap",
+	"watch-webpack": "webpack -d -w",
+	"build-ts": "tsc -p .",
+	"build-ts-d": "tsc -p . --sourcemap",
+	"build-webpack": "webpack",
+	"build-webpack-d": "webpack -d",
+	"build": "npm run build-ts && npm run build-webpack",
+	"build-d": "npm run build-ts-d && npm run build-webpack-d",
+	"start": "npm run build && node app",
+	"test": "npm run build-d && node app"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "ws": "^1.1.1"
-  },
-  "devDependencies": {
     "source-map-loader": "^0.1.5",
-    "webpack": "^1.13.2"
+    "typescript": "^2.0.3",
+    "webpack": "^1.13.2",
+    "ws": "^1.1.1"
   }
 }
