--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
 		"target": "es5",
 		"noImplicitAny": false,
 		"module": "commonjs",
-		"removeComments": false,
-		"sourceMap": true
+		"removeComments": false
 	}
 }
