重新加载typings依赖项

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 *.js
 !/public/scripts/lib/*.js
 *.js.map
-typings
-!/typings/index-custom.d.ts
+
+typings/*
+!typings/index-custom.d.ts
 
 # Logs
 logs
