--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,10 @@
 		"**/*.js": {
 			"when": "$(basename).ts"
 		},
-		"**/*.map": true
+		"**/*.map": true,
+		"typings/globals": true,
+		"typings/index.d.ts": true,
+		"node_modules": true
 	},
 	"explorerExcludedFiles.show": true
 }
