星球占领计时效果前后端同时进行

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"test": "npm run build-d && node app"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
