--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "log4js": "^0.6.38",
     "ws": "^1.1.1"
   },
   "devDependencies": {
