--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "ws": "^1.1.1"
   },
   "devDependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
     "source-map-loader": "^0.1.5",
     "typescript": "^2.0.3",
     "webpack": "^1.13.2"
