--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
 		"**/*.map": true,
 		"node_modules": true
 	},
-	"explorerExcludedFiles.show": true
+	"explorerExcludedFiles.show": true,
+	"typescript.check.workspaceVersion": false
 }
